<resources>
    <string name="app_name">LeagueOfLegendsAPK</string>
    <string name="title_index">Inicio</string>
    <string name="title_champions">Campeones</string>
    <string name="title_configuration">Configuracion</string>
    <string name="title_ranked_solo">Solo Queue</string>
    <string name="title_ranked_flex">Flex Queue</string>
    <string name="title_ranked">Ranking</string>
    <string name="text_login">Login</string>
    <string name="hint_summonersName">Summoner\'s name</string>
    <string name="hint_championFilter">Champion Search</string>
    <string name="title_bestChampions">Mis mejores campeones</string>
    <string name="title_weeklyRotation">Rotacion semanal</string>
    <string name="hint_seeMore">Ver mas</string>
    <string name="title_logout">Cerrar sesion</string>
    <string name="title_tier">Tier</string>
    <string name="title_rank">Rank</string>
    <string name="title_leaguePoints">League points</string>
    <string name="title_wins">Victorias</string>
    <string name="title_losses">Derrotas</string>
    <string name="title_switchNightMode">Modo oscuro</string>
    <string name="title_level">Nivel</string>
    <string name="search_champion">Buscar Campeon</string>

</resources>