<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.leagueoflegendsapk.ui.index.HomeFragment"
        android:label="@string/title_index"
        tools:layout="@layout/fragment_index" >
        <action
            android:id="@+id/action_navigation_home_to_patchNotesFragment"
            app:destination="@id/patchNotesFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.leagueoflegendsapk.ui.champions.ChampionsFragment"
        android:label="@string/title_champions"
        tools:layout="@layout/fragment_champions" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.leagueoflegendsapk.ui.configuration.ConfigurationFragment"
        android:label="@string/title_configuration"
        tools:layout="@layout/fragment_configuration" />
    <fragment
        android:id="@+id/patchNotesFragment"
        android:name="com.example.leagueoflegendsapk.ui.patch_notes.PatchNotesFragment"
        android:label="fragment_patch_notes"
        tools:layout="@layout/fragment_patch_notes" />
</navigation>